import "sub_message.proto";
import "enum.proto";
import "presence_check.proto";

message OneOfMsg {
  oneof field {
    int32 sint = 2;
    fixed64 fixed = 3;
    test.submsg.Other other = 4;
    kotlinx.rpc.protobuf.test.MyEnum enum = 5;
  }
}

message OneOfWithRequired {
  oneof field {
    int32 sint = 1;
    kotlinx.rpc.protobuf.test.PresenceCheck msg = 2;
  }
}
