syntax = "proto2";

package test.recursive;

message RecursiveReq {
  required RecursiveReq rec = 1;
  optional int32 num = 2;
}

message Recursive {
  optional Recursive rec = 1;
  optional int32 num = 2;
}
