syntax = "proto3";

package kotlinx.rpc.protobuf.test;

import "presence_check.proto";

message TestMap {
  map<string, int64> primitives = 1;
  map<int32, kotlinx.rpc.protobuf.test.PresenceCheck> messages = 2;
}
